# proc-macro-workshop

./: Cargo.toml  main.rs
01-builder/src/: lib.rs
02-debug/: Cargo.toml
03-seq/: Cargo.toml
03-seq/src/: lib.rs
04-sorted/: Cargo.toml
04-sorted/src/: lib.rs
05-bitfield/impl/: Cargo.toml
05-bitfield/impl/src/: lib.rs
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 03-accessors.rs
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: progress.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: progress.rs
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
