[package]
name = "proc-macro-workshop"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[[bin]]
name = "workshop"
path = "main.rs"

[dependencies]
bitfield = { path = "05-bitfield" }
derive_builder = { path = "01-builder" }
derive_debug = { path = "02-debug" }
seq = { path = "03-seq" }
sorted = { path = "04-sorted" }
